5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1747_3096.log
== TEST (2019-05-15 14:17:52) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	else:
		g1 = 0
	g = g + g1

print(g)	
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:18:00) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	else:
		g1 = 0
	g = g + g1

print(g)	
-- EXECUTION TIME:
0.133074
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
73
---- user output:
53
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
135
---- user output:
115
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:18:13) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	else:
		g1 = 0
	g = g + g1

print(g)	
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:37:42) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	else:
		g1 = 0
	g = g + g1

print(g)	
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:37:45) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	else:
		g1 = 0
	g = g + g1

print(g)	
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:37:54) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	else:
		g1 = 0
	g = g + g1

print(g)	
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:38:00) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	else:
		g1 = 0
	g = g + g1

print(g)	
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:38:04) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	else:
		g1 = 0
	g = g + g1

print(g)	
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:38:09) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	else:
		g1 = 0
	g = g + g1

print(g)	
-- EXECUTION TIME:
0.239181
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
73
---- user output:
53
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
135
---- user output:
115
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:38:14) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	else:
		g1 = 0
	g = g + g1

print(g)	
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:39:14) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0
	g = g + g1

print(g)	
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:39:23) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0
	g = g + g1

print(g)	
-- EXECUTION TIME:
0.137066
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
73
---- user output:
53
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
135
---- user output:
115
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:39:28) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0
	g = g + g1

print(g)	
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:39:56) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0
	g = g + g1

print(g)	
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:40:17) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0
	g = g + g1

print(g)	
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:43:51) 
-- CODE:
p = int(input("Posicao: "))
g = 0

if (p == 1):
	g2 = 20
elif (p == 2):
	g2 = 15
elif (p == 3):
	g2 = 10
elif (4 <= p <= 10):
	g2 = 11 - p
elif (p < 0):
	g2 = 0
else:
	g2 = 0
	
while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0
	g = g + g1 + g2

print(g)	
-- OUTPUT:
253
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:45:13) 
-- CODE:
p = int(input("Posicao: "))
g = 0
	
while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0
	g = g + g1 + g2

print(g)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    g = g + g1 + g2
NameError: name 'g2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:45:33) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0
	g = g + g1

print(g)	
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:45:47) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0
	g = g + g1

print(g)	
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:46:00) 
-- CODE:

g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0
	g = g + g1

print(g)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while (p != 0):
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:46:26) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0
	g = g + g1

if ()	

print(g)	
-- ERROR:
File "XXXX", line 20
    if ()	
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:46:30) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0
	g = g + g1

	

print(g)	
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:48:21) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0
	g = g + g1

if (p == 1):
	g2 = 20
elif (p == 2):
	g2 = 15
elif (p == 3):
	g2 = 10
elif (4 <= p <= 10):
	g2 = 11 - p
elif (p < 0):
	g2 = 0
else:
	g2 = 0

total = g + g2

print(total)

-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:48:37) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0
	g = g + g1

if (p == 1):
	g2 = 20
elif (p == 2):
	g2 = 15
elif (p == 3):
	g2 = 10
elif (4 <= p <= 10):
	g2 = 11 - p
elif (p < 0):
	g2 = 0
else:
	g2 = 0

total = g + g2

print(total)

-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:48:50) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0
	g = g + g1

if (p == 1):
	g2 = 20
elif (p == 2):
	g2 = 15
elif (p == 3):
	g2 = 10
elif (4 <= p <= 10):
	g2 = 11 - p
elif (p < 0):
	g2 = 0
else:
	g2 = 0

total = g + g2

print(total)

-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:49:08) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0
	g = g + g1

if (p == 1):
	g2 = 20
elif (p == 2):
	g2 = 15
elif (p == 3):
	g2 = 10
elif (4 <= p <= 10):
	g2 = 11 - p
elif (p < 0):
	g2 = 0
else:
	g2 = 0

total = g + g2

print(total)

-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:49:44) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0
	g = g + g1

if (p == 1):
	g2 = 20
elif (p == 2):
	g2 = 15
elif (p == 3):
	g2 = 10
elif (4 <= p <= 10):
	g2 = 11 - p
elif (p < 0):
	g2 = 0
else:
	g2 = 0

total = g + g2

print(total)

-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:54:12) 
-- CODE:
p = int(input("Posicao: "))


while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0
	g = 0	
	g = g + g1

if (p == 1):
	g2 = 20
elif (p == 2):
	g2 = 15
elif (p == 3):
	g2 = 10
elif (4 <= p <= 10):
	g2 = 11 - p
elif (p < 0):
	g2 = 0
else:
	g2 = 0

total = g + g2

print(total)

-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:54:19) 
-- CODE:
p = int(input("Posicao: "))


while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0
	g = 0	
	g = g + g1

if (p == 1):
	g2 = 20
elif (p == 2):
	g2 = 15
elif (p == 3):
	g2 = 10
elif (4 <= p <= 10):
	g2 = 11 - p
elif (p < 0):
	g2 = 0
else:
	g2 = 0

total = g + g2

print(total)

-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:54:35) 
-- CODE:
p = int(input("Posicao: "))
g = 0

while (p != 0):
	p = int(input("Posicao: "))
	if (p == 1):
		g1 = 20
	elif (p == 2):
		g1 = 15
	elif (p == 3):
		g1 = 10
	elif (4 <= p <= 10):
		g1 = 11 - p
	elif (p < 0):
		g1 = 0
	else:
		g1 = 0	
	g = g + g1

if (p == 1):
	g2 = 20
elif (p == 2):
	g2 = 15
elif (p == 3):
	g2 = 10
elif (4 <= p <= 10):
	g2 = 11 - p
elif (p < 0):
	g2 = 0
else:
	g2 = 0

total = g + g2

print(total)

-- EXECUTION TIME:
0.157713
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
73
---- user output:
53
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
135
---- user output:
115
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
